--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
-{
-    "eslint.alwaysShowStatus": true,
-    "eslint.probe": [
-        "javascript",
-        "javascriptreact",
-        "typescript",
-        "typescriptreact",
-        "html",
-        "vue",
-        "markdown",
-        "react"
-    ],
-    "eslint.run": "onSave"
-}
+// {
+//     "eslint.alwaysShowStatus": true,
+//     "eslint.probe": [
+//         "javascript",
+//         "javascriptreact",
+//         "typescript",
+//         "typescriptreact",
+//         "html",
+//         "vue",
+//         "markdown",
+//         "react"
+//     ],
+//     "eslint.run": "onSave"
+// }
