--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
   },
   "dependencies": {
     "gatsby": "^2.24.50",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.31",
+    "gatsby-remark-images": "^3.3.28",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.27",
     "gatsby-transformer-remark": "^2.8.32",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.0"
